syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.fferrari.pricescraper.proto";

package proto;

/*
  AddBatchSpecification
  grpcurl -d '{"name": "zambezia-all", "description": "zambezia stamps", "url": "https://www.delcampe.net/en_US/collectibles/search?term=&categories%5B%5D=6315&search_mode=all&order=sale_start_datetime&display_state=sold_items", "provider": "delcampe", "intervalSeconds": 60 }' -plaintext 127.0.0.1:8101 proto.PriceScraperService.AddBatchSpecification

  PauseBatchSpecification
  grpcurl -d '{"batchSpecificationId": "......"}' -plaintext 127.0.0.1:8101 proto.PriceScraperService.PauseBatchSpecification
 */

service PriceScraperService {
  rpc AddBatchSpecification (AddBatchSpecificationRequest) returns (AddResponse) {}
  rpc PauseBatchSpecification (PauseBatchSpecificationRequest) returns (PauseResponse) {}
}

message AddBatchSpecificationRequest {
  string name = 1;
  string description = 2;
  string url = 3;
  string provider = 4;
  int32 intervalSeconds = 5;
}

message PauseBatchSpecificationRequest {
  string batchSpecificationId = 1;
}

message AddResponse {
  string batchSpecificationId = 1;
}

message PauseResponse {
}
